--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 								<h1><a href="index.html" id="logo">ToonToom</a></h1>
 								<hr />
 								<p>Music from the motherland...</p>
+								<p>Site Under Construction</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Play</a>
