--- a/index.html
+++ b/index.html
@@ -1,14 +1,46 @@
 <!DOCTYPE HTML>
 <!--
-	Megapixel code station
+	MegaCodeStore
 -->
 <html>
 	<head>
-		<title>Toontoom Radio </title>
+		<title>Toontoom Radio</title>
+		<!--Meta and SEO-->
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description"/>
+
+		<meta name="google"/>
+
+		<meta name="googlebot"/>
+
+		<meta name="keywords"/>
+
+		<meta name="robots"/>
+
+		<meta name="verify"/>
+		<!--Meta phone SEO-->
+			<link rel="apple-touch-icon"/>
+
+			<meta name="format-detection"/>
+
+			<meta name="HandheldFriendly"/>
+
+			<meta name="viewport"/>
+	
+		<!--Meta and SEO-->
+	
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
+		
+		
+		<script src="respond.min.js"></script>
+			<!--VosCast.com Flash Player-->
+		<script src="//cdn.voscast.com/player/?key=f1b0bb0cb587c73cad62b00c1d95995c">
+		</script>
+			<!--End Player-->
+		
 	</head>
 	<body class="homepage is-preload">
 		<div id="page-wrapper">
@@ -19,13 +51,15 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">ToonToom</a></h1>
+								<h1><a href="index.html" id="logo">ToonToom Radio</a></h1>
 								<hr />
 								<p>Music from the motherland...</p>
-								<p>Site Under Construction</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Play</a>
+								<!--VosCast.com Flash Player-->
+<script type="text/javascript" src="//cdn.voscast.com/player/?key=f1b0bb0cb587c73cad62b00c1d95995c"></script>
+<!--End Player-->
 							</footer>
 						</div>
 
