--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	MegaCodeStore
+	MegaPixelCodeStore
 -->
 <html>
 	<head>
@@ -32,7 +32,7 @@
 	
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link href="/YOUR_PATH/favicon.ico" rel="icon" type="image/x-icon" />
+		<link href="/images/fav.gif" rel="icon" type="image/x-icon" />
 		
 		
 	</head>
