--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 								<p>Music from the motherland...</p>
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Play</a>
-								<!--VosCast.com Flash Player-->
+								<a href="#banner" class="button circled scrolly"><!--VosCast.com Flash Player-->
 <script type="text/javascript" src="//cdn.voscast.com/player/?key=f1b0bb0cb587c73cad62b00c1d95995c"></script>
-<!--End Player-->
+<!--End Player--></a>
+								
 							</footer>
 						</div>
 
