--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
 										</header>
 										<p>Spread the good vibes with friends and family on ToonToom Radio</p>
 										<ul class="icons">
-											<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a href="https://twitter.com/toontoomradio?lang=en" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+											<li><a href="https://www.facebook.com/toontoomradio/?hl=en" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+											<li><a href="https://www.instagram.com/toontoomradionline/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 											<li></li>
 											<li></li>
 											<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
