--- a/index.html
+++ b/index.html
@@ -64,16 +64,14 @@
 								<li>
 									<a href="#">Contact Us</a>
 									<ul>
-										<li><a href="#">Mobile (+23332311221)</a></li>
-										<li><a href="#">Mobile2 (+23332311221)</a></li>
-										<li><a href="#">Email (toontoomradio@somemail.com)</a></li>
+										<li><a href="#">Mobile (+23326 624 4085)</a></li>
+										<li><a href="#">Email (toontoomradio@gmail.com)</a></li>
 										<li>
 											<a href="#">SocialMedia &hellip;</a>
 											<ul>
-												<li><a href="#">Facebook</a></li>
-												<li><a href="#">Instagram</a></li>
-												<li><a href="#">linkedIn</a></li>
-												<li><a href="#">Twitter</a></li>
+												<li><a href="https://www.facebook.com/toontoomradio/?hl=en">Facebook</a></li>
+												<li><a href="https://www.instagram.com/toontoomradionline/?hl=en">Instagram</a></li>
+												<li><a href="https://twitter.com/toontoomradio?lang=en">Twitter</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Location</a></li>
