--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 										<li>
 											<a href="#">SocialMedia &hellip;</a>
 											<ul>
-												<li><a href="https://www.facebook.com/toontoomradio/?hl=en">Facebook</a></li>
-												<li><a href="https://www.instagram.com/toontoomradionline/?hl=en">Instagram</a></li>
-												<li><a href="https://twitter.com/toontoomradio?lang=en">Twitter</a></li>
+												<li><a href="https://www.facebook.com/toontoomradio/?hl=en"  target="_blank" >Facebook</a></li>
+												<li><a href="https://www.instagram.com/toontoomradionline/?hl=en"  target="_blank">Instagram</a></li>
+												<li><a href="https://twitter.com/toontoomradio?lang=en"  target="_blank">Twitter</a></li>
 											</ul>
 										</li>
 										<li><a href="#">Location</a></li>
@@ -199,12 +199,12 @@
 										</header>
 										<p>Spread the good vibes with friends and family on ToonToom Radio</p>
 										<ul class="icons">
-											<li><a href="https://twitter.com/toontoomradio?lang=en" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-											<li><a href="https://www.facebook.com/toontoomradio/?hl=en" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-											<li><a href="https://www.instagram.com/toontoomradionline/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+											<li><a href="https://twitter.com/toontoomradio?lang=en" class="icon brands fa-twitter"  target="_blank"><span class="label">Twitter</span></a></li>
+											<li><a href="https://www.facebook.com/toontoomradio/?hl=en" class="icon brands fa-facebook-f"  target="_blank"><span class="label">Facebook</span></a></li>
+											<li><a href="https://www.instagram.com/toontoomradionline/?hl=en" class="icon brands fa-instagram"  target="_blank"><span class="label">Instagram</span></a></li>
 											<li></li>
 											<li></li>
-											<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+											<!--<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
 										</ul>
 									</section>
 
