--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 												<li><a href="https://twitter.com/toontoomradio?lang=en"  target="_blank">Twitter</a></li>
 											</ul>
 										</li>
-										<li><a target="_blank href="https://www.google.com/maps/uv?hl=en&pb=!1s0xfdf9bc1615e0931:0xc690d24dcb8aeff6!3m1!7e115!4s/maps/place/toontoom%2Blocation%2Baccra/@5.5757985,-0.2133578,3a,75y,324.23h,90t/data%3D*213m4*211e1*213m2*211sPuwEameAFA2bFm4PTC9zlA*212e0*214m2*213m1*211s0xfdf9bc1615e0931:0xc690d24dcb8aeff6?sa%3DX!5stoontoom+location+accra+-+Google+Search&imagekey=!1e2!2sPuwEameAFA2bFm4PTC9zlA&sa=X&ved=2ahUKEwiHyOSL--DmAhUQShUIHXGwC5AQpx8wD3oECBoQBg">Location</a></li>
+										<li><a href="https://www.google.com/maps/uv?hl=en&pb=!1s0xfdf9bc1615e0931:0xc690d24dcb8aeff6!3m1!7e115!4s/maps/place/toontoom%2Blocation%2Baccra/@5.5757985,-0.2133578,3a,75y,324.23h,90t/data%3D*213m4*211e1*213m2*211sPuwEameAFA2bFm4PTC9zlA*212e0*214m2*213m1*211s0xfdf9bc1615e0931:0xc690d24dcb8aeff6?sa%3DX!5stoontoom+location+accra+-+Google+Search&imagekey=!1e2!2sPuwEameAFA2bFm4PTC9zlA&sa=X&ved=2ahUKEwiHyOSL--DmAhUQShUIHXGwC5AQpx8wD3oECBoQBg" target="_blank>Location</a></li>
 									</ul>
 								</li>
 								<!--<li><a href="left-sidebar.html">Left Sidebar</a></li>
