--- a/index.html
+++ b/index.html
@@ -102,81 +102,81 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+								<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+									<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+									<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+									<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+									<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+									<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+									<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+									<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+									<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 						<article>
 							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Some Picture</a></h3>
+									<h3><a href="#">Programs</a></h3>
 							</header>
-							<p>and some relevant information about the picture</p>
+							<p>From 0:00-0:00AM </p>
 						</article>
 
 					</div>
