--- a/index.html
+++ b/index.html
@@ -1,237 +1,191 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
-	MegaPixelCodeStore
--->
+	MegaPixelCodeStore-->
 <html>
-	<head>
-		<title>Toontoom Radio</title>
-		<!--Meta and SEO-->
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta name="description"/>
+  <head>
+    <title>Toontoom Radio</title>
+    <!--Meta and SEO-->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="description">
+    <meta name="google">
+    <meta name="googlebot">
+    <meta name="keywords">
+    <meta name="robots">
+    <meta name="verify">
+    <!--Meta phone SEO-->
+    <link rel="apple-touch-icon">
+    <meta name="format-detection">
+    <meta name="HandheldFriendly">
+    <meta name="viewport">
+    <!--Meta and SEO-->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <noscript><link rel="stylesheet" href="assets/css/noscript.css"></noscript>
+    <link href="/images/fav.gif" rel="icon" type="image/x-icon">
+  </head>
+  <body class="homepage is-preload">
+    <div id="page-wrapper">
+      <!-- Header -->
+      <div id="header">
+        <!-- Inner -->
+        <div class="inner">
+          <header>
+            <h1><a href="index.html" id="logo">ToonToom Radio</a></h1>
+            <hr>
+            <p>Music from the motherland...</p>
+          </header>
+          <footer> <a href="#banner" class="button circled scrolly"><!--VosCast.com Flash Player-->
+              <script type="text/javascript" src="//cdn.voscast.com/player/?key=f1b0bb0cb587c73cad62b00c1d95995c"></script>
+              <!--End Player--></a> </footer>
+        </div>
+        <!-- Nav -->
+        <nav id="nav">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li> <a href="#">Contact Us</a>
+              <ul>
+                <li><a href="#">Mobile (+23326 624 4085)</a></li>
+                <li><a href="#">Email (toontoomradio@gmail.com)</a></li>
+                <li> <a href="#">SocialMedia …</a>
+                  <ul>
+                    <li><a href="https://www.facebook.com/toontoomradio/?hl=en"
 
-		<meta name="google"/>
+                        target="_blank">Facebook</a></li>
+                    <li><a href="https://www.instagram.com/toontoomradionline/?hl=en"
 
-		<meta name="googlebot"/>
+                        target="_blank">Instagram</a></li>
+                    <li><a href="https://twitter.com/toontoomradio?lang=en" target="_blank">Twitter</a></li>
+                  </ul>
+                </li>
+                <li><a href="https://www.google.com/maps/uv?hl=en&amp;pb=%211s0xfdf9bc1615e0931:0xc690d24dcb8aeff6%213m1%217e115%214s/maps/place/toontoom%2Blocation%2Baccra/@5.5757985,-0.2133578,3a,75y,324.23h,90t/data%3D*213m4*211e1*213m2*211sPuwEameAFA2bFm4PTC9zlA*212e0*214m2*213m1*211s0xfdf9bc1615e0931:0xc690d24dcb8aeff6?sa%3DX%215stoontoom+location+accra+-+Google+Search&amp;imagekey=%211e2%212sPuwEameAFA2bFm4PTC9zlA&amp;sa=X&amp;ved=2ahUKEwiHyOSL--DmAhUQShUIHXGwC5AQpx8wD3oECBoQBg"
 
-		<meta name="keywords"/>
+                    target="_blank">Location</a></li>
+              </ul>
+            </li>
+            <!--<li><a href="left-sidebar.html">Left Sidebar</a></li>-->
+            <!--<li><a href="right-sidebar.html">Right Sidebar</a></li>-->
+            <!--<li><a href="no-sidebar.html">No Sidebar</a></li>-->
+          </ul>
+        </nav>
+      </div>
+      <!-- Banner -->
+      <section id="banner">
+        <header>
+          <h2>Hi. You're Listening to <strong>TOONTOOM Radio</strong>.</h2>
+          <p> Free 24/7 online music. Enjoy Non Stop Music mixes from Africas
+            finest DJ's. </p>
+        </header>
+      </section>
+      <!-- Carousel -->
+      <section class="carousel">
+        <div class="reel">
+          <article> <a href="#" class="image featured"><img src="images/pic01.jpg"
 
-		<meta name="robots"/>
+                alt=""></a>
+            <header>
+              <h3><a href="#">Wake Up Africa</a></h3>
+            </header>
+            <p>6AM-12NOON GMT </p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic02.jpg"
 
-		<meta name="verify"/>
-		<!--Meta phone SEO-->
-			<link rel="apple-touch-icon"/>
+                alt=""></a>
+            <header>
+              <h3><a href="#">Urban Play</a></h3>
+            </header>
+            <p>12NOON-6PM GMT <br>
+              Mondays-Fridays</p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic03.jpg"
 
-			<meta name="format-detection"/>
+                alt=""></a>
+            <header>
+              <h3><a href="#">Safari</a></h3>
+            </header>
+            <p>6PM-12MIDNIGHT GMT <br>
+              Mondays-Fridays </p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic04.jpg"
 
-			<meta name="HandheldFriendly"/>
+                alt=""></a>
+            <header>
+              <h3><a href="#">Yard Play</a></h3>
+            </header>
+            <p>12AM-6AM GMT <br>
+              Mondays-Fridays </p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic05.jpg"
 
-			<meta name="viewport"/>
-	
-		<!--Meta and SEO-->
-	
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<link href="/images/fav.gif" rel="icon" type="image/x-icon" />
-		
-		
-	</head>
-	<body class="homepage is-preload">
-		<div id="page-wrapper">
+                alt=""></a>
+            <header>
+              <h3><a href="#"> Power Mix Show</a></h3>
+            </header>
+            <p>2PM-4PM GMT <br>
+              Saturdays</p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic06.jpg"
 
-			<!-- Header -->
-				<div id="header">
+                alt=""></a>
+            <header>
+              <h3><a href="#">The Mix Show Madness</a></h3>
+            </header>
+            <p>4PM-6PM GMT <br>
+              Saturdays</p>
+          </article>
+        </div>
+      </section>
+      <!-- Main -->
+      <!-- Features -->
+      <!-- Footer -->
+      <div id="footer">
+        <div class="container">
+          <hr>
+          <div class="row">
+            <div class="col-12">
+              <!-- Contact -->
+              <section class="contact">
+                <header>
+                  <h3>Vibe with us on all Social media Platforms</h3>
+                </header>
+                <p>Spread the good vibes with friends and family on ToonToom
+                  Radio</p>
+                <ul class="icons">
+                  <li><a href="https://twitter.com/toontoomradio?lang=en" class="icon brands fa-twitter"
 
-					<!-- Inner -->
-						<div class="inner">
-							<header>
-								<h1><a href="index.html" id="logo">ToonToom Radio</a></h1>
-								<hr />
-								<p>Music from the motherland...</p>
-							</header>
-							<footer>
-								<a href="#banner" class="button circled scrolly"><!--VosCast.com Flash Player-->
-<script type="text/javascript" src="//cdn.voscast.com/player/?key=f1b0bb0cb587c73cad62b00c1d95995c"></script>
-<!--End Player--></a>
-								
-							</footer>
-						</div>
+                      target="_blank"><span class="label">Twitter</span></a></li>
+                  <li><a href="https://www.facebook.com/toontoomradio/?hl=en" class="icon brands fa-facebook-f"
 
-					<!-- Nav -->
-				  <nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li>
-									<a href="#">Contact Us</a>
-									<ul>
-										<li><a href="#">Mobile (+23326 624 4085)</a></li>
-										<li><a href="#">Email (toontoomradio@gmail.com)</a></li>
-										<li>
-											<a href="#">SocialMedia &hellip;</a>
-											<ul>
-												<li><a href="https://www.facebook.com/toontoomradio/?hl=en"  target="_blank" >Facebook</a></li>
-												<li><a href="https://www.instagram.com/toontoomradionline/?hl=en"  target="_blank">Instagram</a></li>
-												<li><a href="https://twitter.com/toontoomradio?lang=en"  target="_blank">Twitter</a></li>
-											</ul>
-										</li>
-										<li><a href="https://www.google.com/maps/uv?hl=en&pb=!1s0xfdf9bc1615e0931:0xc690d24dcb8aeff6!3m1!7e115!4s/maps/place/toontoom%2Blocation%2Baccra/@5.5757985,-0.2133578,3a,75y,324.23h,90t/data%3D*213m4*211e1*213m2*211sPuwEameAFA2bFm4PTC9zlA*212e0*214m2*213m1*211s0xfdf9bc1615e0931:0xc690d24dcb8aeff6?sa%3DX!5stoontoom+location+accra+-+Google+Search&imagekey=!1e2!2sPuwEameAFA2bFm4PTC9zlA&sa=X&ved=2ahUKEwiHyOSL--DmAhUQShUIHXGwC5AQpx8wD3oECBoQBg" target="_blank">Location</a></li>
-									</ul>
-								</li>
-								<!--<li><a href="left-sidebar.html">Left Sidebar</a></li>-->
-								<!--<li><a href="right-sidebar.html">Right Sidebar</a></li>-->
-								<!--<li><a href="no-sidebar.html">No Sidebar</a></li>-->
-							</ul>
-						</nav>
+                      target="_blank"><span class="label">Facebook</span></a></li>
+                  <li><a href="https://www.instagram.com/toontoomradionline/?hl=en"
 
-				</div>
-
-			<!-- Banner -->
-				<section id="banner">
-					<header>
-						<h2>Hi. You're Listening to <strong>TOONTOOM Radio</strong>.</h2>
-						<p>
-							Free 24/7 online music. Enjoy Non Stop Music mixes from Africas finest DJ's.
-						</p>
-					</header>
-				</section>
-
-			<!-- Carousel -->
-		  <section class="carousel">
-					<div class="reel">
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-									<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-									<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<header>
-									<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-									<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-							<header>
-									<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-									<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-									<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<header>
-									<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-									<h3><a href="#">Programs</a></h3>
-							</header>
-							<p>From 0:00-0:00AM </p>
-						</article>
-
-					</div>
-				</section>
-
-			<!-- Main -->
-			<!-- Features -->
-				
-			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-<hr />
-						<div class="row">
-							<div class="col-12">
-
-								<!-- Contact -->
-									<section class="contact">
-										<header>
-											<h3>Vibe with us on all Social media Platforms</h3>
-										</header>
-										<p>Spread the good vibes with friends and family on ToonToom Radio</p>
-										<ul class="icons">
-											<li><a href="https://twitter.com/toontoomradio?lang=en" class="icon brands fa-twitter"  target="_blank"><span class="label">Twitter</span></a></li>
-											<li><a href="https://www.facebook.com/toontoomradio/?hl=en" class="icon brands fa-facebook-f"  target="_blank"><span class="label">Facebook</span></a></li>
-											<li><a href="https://www.instagram.com/toontoomradionline/?hl=en" class="icon brands fa-instagram"  target="_blank"><span class="label">Instagram</span></a></li>
-											<li></li>
-											<li></li>
-											<!--<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
-										</ul>
-									</section>
-
-								<!-- Copyright -->
-									<div class="copyright">
-										<ul class="menu">
-											<li>&copy; Toontoomradio. All rights reserved.</li><li>Design: <a href="http://www.megapixelgh.com">Megapixel</a></li>
-										</ul>
-									</div>
-
-							</div>
-
-						</div>
-				  </div>
-		  </div>
-
-		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+                      class="icon brands fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+                  <li><br>
+                  </li>
+                  <li><br>
+                  </li>
+                  <!--<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>-->
+                </ul>
+              </section>
+              <!-- Copyright -->
+              <div class="copyright">
+                <ul class="menu">
+                  <li>© Toontoomradio. All rights reserved.</li>
+                  <li>Design: <a href="http://www.megapixelgh.com">MegapixelGh</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
