--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	MegaPixelCodeStore-->
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Toontoom Radio</title>
     <!--Meta and SEO-->
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="description">
     <meta name="google">
@@ -24,8 +24,7 @@
     <link href="/images/fav.gif" rel="icon" type="image/x-icon">
   </head>
   <body class="homepage is-preload">
-    <div id="page-wrapper">
-      <!-- Header -->
+    <div id="page-wrapper"> <!-- Header -->
       <div id="header">
         <!-- Inner -->
         <div class="inner">
@@ -34,7 +33,8 @@
             <hr>
             <p>Music from the motherland...</p>
           </header>
-          <footer> <a href="#banner" class="button circled scrolly"><!--VosCast.com Flash Player-->
+          <footer> <a href="#banner" class="button circled scrolly">
+              <!--VosCast.com Flash Player-->
               <script type="text/javascript" src="//cdn.voscast.com/player/?key=f1b0bb0cb587c73cad62b00c1d95995c"></script>
               <!--End Player--></a> </footer>
         </div>
@@ -96,13 +96,13 @@
             <p>12NOON-6PM GMT <br>
               Mondays-Fridays</p>
           </article>
-          <article> <a href="#" class="image featured"><img src="images/pic03.jpg"
+          <article> <a href="#" class="image featured"><img src="images/pic03.png"
 
                 alt=""></a>
             <header>
               <h3><a href="#">Safari</a></h3>
             </header>
-            <p>6PM-12MIDNIGHT GMT <br>
+            <p>6PM-12AM GMT <br>
               Mondays-Fridays </p>
           </article>
           <article> <a href="#" class="image featured"><img src="images/pic04.jpg"
@@ -114,7 +114,16 @@
             <p>12AM-6AM GMT <br>
               Mondays-Fridays </p>
           </article>
-          <article> <a href="#" class="image featured"><img src="images/pic05.jpg"
+          <article> <a href="#" class="image featured"><img src="images/pic10.png"
+
+                alt=""></a>
+            <header>
+              <h3><a href="#">The Playlist</a></h3>
+            </header>
+            <p>5-7EST / 9-11pm GMT <br>
+              Thursdays </p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic05.png"
 
                 alt=""></a>
             <header>
@@ -123,13 +132,49 @@
             <p>2PM-4PM GMT <br>
               Saturdays</p>
           </article>
-          <article> <a href="#" class="image featured"><img src="images/pic06.jpg"
+          <article> <a href="#" class="image featured"><img src="images/pic06.png"
 
                 alt=""></a>
             <header>
               <h3><a href="#">The Mix Show Madness</a></h3>
             </header>
             <p>4PM-6PM GMT <br>
+              Saturdays</p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic11.png"
+
+                alt=""></a>
+            <header>
+              <h3><a href="#">Jump Off GMT </a></h3>
+            </header>
+            <p>12AM-6AM GMT <br>
+              Saturdays</p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic13.png"
+
+                alt=""></a>
+            <header>
+              <h3><a href="#">Weekend Africa </a></h3>
+            </header>
+            <p>6AM-12NOON GMT <br>
+              Saturdays</p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic05.png"
+
+                alt=""></a>
+            <header>
+              <h3><a href="#">Power Mix </a></h3>
+            </header>
+            <p>12NOON-6PM GMT <br>
+              Saturdays</p>
+          </article>
+          <article> <a href="#" class="image featured"><img src="images/pic12.png"
+
+                alt=""></a>
+            <header>
+              <h3><a href="#">Safari Weekend </a></h3>
+            </header>
+            <p>6PM-6AM GMT <br>
               Saturdays</p>
           </article>
         </div>
