--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
                 alt=""></a>
             <header>
-              <h3><a href="#">Jump Off GMT </a></h3>
+              <h3><a href="#">Jump Off</a></h3>
             </header>
             <p>12AM-6AM GMT <br>
               Saturdays</p>
